<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/make_preset_view"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="25sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginBottom="0sp"
        >

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            android:background="@android:color/transparent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_calendar_today_24"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/notosans_kr_regular"
            android:lineSpacingExtra="0sp"
            android:text="@string/make_preset_text"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:includeFontPadding="false"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true"
            app:chipSpacingHorizontal="35sp">

            <!-- Chips can be declared here, or added dynamically. -->
            <com.google.android.material.chip.Chip
                android:id="@+id/health_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Chip.Suggestion"
                android:checked="true"
                android:text="@string/health_chip"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/friend_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Chip.Suggestion"
                android:text="@string/friend_chip"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/work_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Chip.Suggestion"
                android:text="@string/work_chip"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/etc_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Chip.Suggestion"
                android:text="@string/etc_chip"/>

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_outlinedTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="제목">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/content_outlinedTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="내용">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7sp"
            android:background="@android:color/transparent"
            android:text="@string/ok_btn"
            android:layout_gravity="end"
            android:textColor="@color/black"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>