<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/date_view"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="25sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginBottom="0sp"
        >

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/gobackactivity"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/datepickup"
            android:src="@drawable/baseline_calendar_today_24"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/notosans_kr_regular"
            android:lineSpacingExtra="0sp"
            android:text="@string/selete_date"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:includeFontPadding="false"
            android:textStyle="bold" />

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            android:id="@+id/calendar_view"
            android:layout_width="match_parent"
            android:layout_height="470dp"
            app:mcv_tileSize="53dp"
            android:layout_marginTop="15dp"
            app:mcv_showOtherDates="none"
            app:mcv_selectionColor="@android:color/darker_gray"
            android:theme="@style/CalenderViewCustom"
            app:mcv_dateTextAppearance="@style/CalenderViewDateCustomText"
            app:mcv_weekDayTextAppearance="@style/CalenderViewWeekCustomText"/>

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:background="@android:color/transparent"
            android:text="@string/ok_btn"
            android:layout_gravity="end"
            android:textColor="@color/black"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>