<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/preset"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentUI.preset.MainMenuPresetFragment">

    <!-- TODO: Update blank fragment layout -->
    <FrameLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="36dp"
            app:srcCompat="@drawable/baseline_add_24"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:layout_marginTop="25sp"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginBottom="0sp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="10sp"
                android:fontFamily="@font/notosans_kr_black"
                android:lineSpacingExtra="0sp"
                android:text="@string/preset_menu_text"
                android:textAlignment="viewStart"
                android:textSize="28sp"
                android:includeFontPadding="false"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true"
                app:chipSpacingHorizontal="35sp">

                <!-- Chips can be declared here, or added dynamically. -->
                <com.google.android.material.chip.Chip
                    android:id="@+id/health_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Chip.Suggestion"
                    android:checked="true"
                    android:text="@string/health_chip"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/friend_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Chip.Suggestion"
                    android:text="@string/friend_chip"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/work_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Chip.Suggestion"
                    android:text="@string/work_chip"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/etc_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Chip.Suggestion"
                    android:text="@string/etc_chip"/>

            </com.google.android.material.chip.ChipGroup>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:id="@+id/presetView">


            </ScrollView>

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>